--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login | Nexora Academy</title>
+  <title>Nexora Academy | Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Tailwind -->
@@ -15,9 +15,9 @@
 
 <body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 flex items-center justify-center min-h-screen text-white">
 
-<div class="bg-white text-gray-900 p-10 rounded-2xl shadow-2xl w-full max-w-md relative">
+<div class="bg-white text-gray-900 p-10 rounded-2xl shadow-2xl w-full max-w-md">
 
-  <h2 class="text-3xl font-bold text-center mb-6">Nexora Academy Login</h2>
+  <h2 class="text-3xl font-bold text-center mb-6">Login to Nexora Academy</h2>
 
   <!-- Email -->
   <input id="email" type="email" placeholder="Email"
@@ -34,11 +34,13 @@
 
   <div class="text-center text-gray-500 mb-4">OR</div>
 
+  <!-- Google Redirect Login -->
   <button onclick="loginWithGoogle()"
     class="w-full bg-red-500 text-white p-3 rounded-lg mb-4 hover:bg-red-600 transition">
     Continue with Google
   </button>
 
+  <!-- Phone -->
   <input id="phone" type="text" placeholder="Phone (+233...)"
     class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
 
@@ -49,18 +51,18 @@
     Login with Phone
   </button>
 
-  <p id="message" class="text-sm text-center mt-4 text-red-500"></p>
+  <p id="message" class="text-sm text-red-500 text-center mt-4"></p>
 
 </div>
 
-<!-- Firebase Script -->
 <script type="module">
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth,
   signInWithEmailAndPassword,
   GoogleAuthProvider,
-  signInWithPopup,
+  signInWithRedirect,
+  getRedirectResult,
   RecaptchaVerifier,
   signInWithPhoneNumber,
   onAuthStateChanged
@@ -78,19 +80,17 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
-
 const message = document.getElementById("message");
 
 
-// 🔹 Email Login
+// 🔹 EMAIL LOGIN
 window.loginWithEmail = function () {
   const email = document.getElementById("email").value;
   const password = document.getElementById("password").value;
 
   signInWithEmailAndPassword(auth, email, password)
     .then((userCredential) => {
-      const user = userCredential.user;
-      saveUser(user);
+      saveUser(userCredential.user);
     })
     .catch((error) => {
       message.innerText = error.message;
@@ -98,22 +98,26 @@ window.loginWithEmail = function () {
 };
 
 
-// 🔹 Google Login
+// 🔹 GOOGLE LOGIN (REDIRECT SAFE)
 window.loginWithGoogle = function () {
   const provider = new GoogleAuthProvider();
-
-  signInWithPopup(auth, provider)
-    .then((result) => {
-      const user = result.user;
-      saveUser(user);
-    })
-    .catch((error) => {
-      message.innerText = error.message;
-    });
+  signInWithRedirect(auth, provider);
 };
 
 
-// 🔹 Phone Login
+// Handle Google Redirect Result
+getRedirectResult(auth)
+  .then((result) => {
+    if (result) {
+      saveUser(result.user);
+    }
+  })
+  .catch((error) => {
+    console.log(error);
+  });
+
+
+// 🔹 PHONE LOGIN
 window.loginWithPhone = function () {
   const phoneNumber = document.getElementById("phone").value;
 
@@ -127,8 +131,7 @@ window.loginWithPhone = function () {
       return confirmationResult.confirm(code);
     })
     .then((userCredential) => {
-      const user = userCredential.user;
-      saveUser(user);
+      saveUser(userCredential.user);
     })
     .catch((error) => {
       message.innerText = error.message;
@@ -136,18 +139,15 @@ window.loginWithPhone = function () {
 };
 
 
-// 🔹 Save UID & Redirect
+// 🔹 SAVE USER + REDIRECT
 function saveUser(user) {
-  console.log("User UID:", user.uid);
-
   localStorage.setItem("nexoraUID", user.uid);
   localStorage.setItem("nexoraEmail", user.email || "Phone User");
-
   window.location.href = "forms.html";
 }
 
 
-// 🔹 Auto Redirect if Already Logged In
+// 🔹 AUTO LOGIN CHECK
 onAuthStateChanged(auth, (user) => {
   if (user) {
     localStorage.setItem("nexoraUID", user.uid);
