--- a/login.html
+++ b/login.html
@@ -163,3 +163,31 @@ gsap.from(".bg-white", { y: 50, opacity: 0, duration: 1 });
 
 </body>
 </html>
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, onAuthStateChanged } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAo-EDgZOxuUY_YUKijv2mRPiyZv-ABioY",
+  authDomain: "nexora-academy-c4fd9.firebaseapp.com",
+  projectId: "nexora-academy-c4fd9",
+  storageBucket: "nexora-academy-c4fd9.firebasestorage.app",
+  messagingSenderId: "56132609079",
+  appId: "1:56132609079:web:a162000d02a9ea20a98bb2",
+  measurementId: "G-WRSWWC0070"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+// 🔐 Protect Page
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+  }
+});
+
+</script>
+
