--- a/login.html
+++ b/login.html
@@ -8,57 +8,51 @@
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 
-<body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 flex items-center justify-center min-h-screen text-white">
+<body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 flex items-center justify-center min-h-screen">
 
-<div class="bg-white text-gray-900 p-10 rounded-2xl shadow-2xl w-full max-w-md">
+<div class="bg-white p-8 rounded-2xl shadow-2xl w-full max-w-md">
 
-  <h2 class="text-3xl font-bold text-center mb-6">Login to Nexora Academy</h2>
+  <h2 class="text-2xl font-bold text-center mb-6">Login to Nexora Academy</h2>
 
-  <!-- Email -->
   <input id="email" type="email" placeholder="Email"
-    class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500">
+    class="w-full p-3 mb-3 border rounded-lg">
 
-  <!-- Password -->
   <input id="password" type="password" placeholder="Password"
-    class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500">
+    class="w-full p-3 mb-4 border rounded-lg">
 
-  <button onclick="loginWithEmail()"
-    class="w-full bg-indigo-600 text-white p-3 rounded-lg mb-4 hover:bg-indigo-700 transition">
+  <button id="emailLoginBtn"
+    class="w-full bg-indigo-600 text-white p-3 rounded-lg mb-3">
     Login with Email
   </button>
 
-  <div class="text-center text-gray-500 mb-4">OR</div>
+  <div class="text-center text-gray-500 mb-3">OR</div>
 
-  <!-- Google Redirect Login -->
-  <button onclick="loginWithGoogle()"
-    class="w-full bg-red-500 text-white p-3 rounded-lg mb-4 hover:bg-red-600 transition">
+  <button id="googleLoginBtn"
+    class="w-full bg-red-500 text-white p-3 rounded-lg mb-4">
     Continue with Google
   </button>
 
-  <!-- Phone -->
   <input id="phone" type="text" placeholder="Phone (+233...)"
-    class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+    class="w-full p-3 mb-3 border rounded-lg">
 
-  <div id="recaptcha-container" class="mb-4"></div>
+  <div id="recaptcha-container" class="mb-3"></div>
 
-  <button onclick="loginWithPhone()"
-    class="w-full bg-green-500 text-white p-3 rounded-lg hover:bg-green-600 transition">
+  <button id="phoneLoginBtn"
+    class="w-full bg-green-500 text-white p-3 rounded-lg">
     Login with Phone
   </button>
 
-  <p id="message" class="text-sm text-red-500 text-center mt-4"></p>
+  <p id="message" class="text-red-500 text-sm mt-4 text-center"></p>
 
 </div>
 
 <script type="module">
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth,
+import {
+  getAuth,
   signInWithEmailAndPassword,
   GoogleAuthProvider,
   signInWithRedirect,
@@ -68,47 +62,7 @@ import { getAuth,
   onAuthStateChanged
 } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyAo-EDgZOxuUY_YUKijv2mRPiyZv-ABioY",
-  authDomain: "nexora-academy-c4fd9.firebaseapp.com",
-  projectId: "nexora-academy-c4fd9",
-  storageBucket: "nexora-academy-c4fd9.firebasestorage.app",
-  messagingSenderId: "56132609079",
-  appId: "1:56132609079:web:a162000d02a9ea20a98bb2",
-  measurementId: "G-WRSWWC0070"
-};
-
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const message = document.getElementById("message");
-
-
-// 🔹 EMAIL LOGIN
-window.loginWithEmail = function () {
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-
-  signInWithEmailAndPassword(auth, email, password)
-    .then((userCredential) => {
-      saveUser(userCredential.user);
-    })
-    .catch((error) => {
-      message.innerText = error.message;
-    });
-};
-
-
-<script type="module">
-
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth,
-  signInWithEmailAndPassword,
-  GoogleAuthProvider,
-  signInWithRedirect,
-  getRedirectResult,
-  onAuthStateChanged
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
+// 🔥 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyAo-EDgZOxuUY_YUKijv2mRPiyZv-ABioY",
   authDomain: "nexora-academy-c4fd9.firebaseapp.com",
@@ -120,84 +74,76 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
+const message = document.getElementById("message");
 
-// GOOGLE LOGIN (Redirect)
-window.loginWithGoogle = function () {
+
+// ================= EMAIL LOGIN =================
+document.getElementById("emailLoginBtn").addEventListener("click", () => {
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+
+  signInWithEmailAndPassword(auth, email, password)
+    .then((userCredential) => {
+      finishLogin(userCredential.user);
+    })
+    .catch(error => message.innerText = error.message);
+});
+
+
+// ================= GOOGLE LOGIN (REDIRECT SAFE) =================
+document.getElementById("googleLoginBtn").addEventListener("click", () => {
   const provider = new GoogleAuthProvider();
   signInWithRedirect(auth, provider);
-};
+});
 
-// VERY IMPORTANT: Handle redirect result FIRST
+
+// Handle redirect result
 getRedirectResult(auth)
   .then((result) => {
     if (result && result.user) {
-      localStorage.setItem("nexoraUID", result.user.uid);
-      window.location.href = "forms.html";
+      finishLogin(result.user);
     }
   })
-  .catch((error) => {
-    console.log("Redirect error:", error);
+  .catch(error => console.log(error));
+
+
+// ================= PHONE LOGIN =================
+document.getElementById("phoneLoginBtn").addEventListener("click", () => {
+
+  const phoneNumber = document.getElementById("phone").value;
+
+  window.recaptchaVerifier = new RecaptchaVerifier(auth, 'recaptcha-container', {
+    size: 'normal'
   });
 
-// BACKUP: If redirect result fails, this will still work
-onAuthStateChanged(auth, (user) => {
-  if (user) {
-    localStorage.setItem("nexoraUID", user.uid);
-    window.location.href = "forms.html";
-  }
+  signInWithPhoneNumber(auth, phoneNumber, window.recaptchaVerifier)
+    .then((confirmationResult) => {
+      const code = prompt("Enter OTP:");
+      return confirmationResult.confirm(code);
+    })
+    .then((userCredential) => {
+      finishLogin(userCredential.user);
+    })
+    .catch(error => message.innerText = error.message);
 });
 
-</script>
 
-// 🔹 SAVE USER + REDIRECT
-function saveUser(user) {
+// ================= FINISH LOGIN =================
+function finishLogin(user) {
   localStorage.setItem("nexoraUID", user.uid);
-  localStorage.setItem("nexoraEmail", user.email || "Phone User");
   window.location.href = "forms.html";
 }
 
 
-// 🔹 AUTO LOGIN CHECK
+// ================= AUTO LOGIN CHECK =================
 onAuthStateChanged(auth, (user) => {
   if (user) {
     localStorage.setItem("nexoraUID", user.uid);
     window.location.href = "forms.html";
   }
 });
-
-
-// Animation
-gsap.from(".bg-white", { y: 50, opacity: 0, duration: 1 });
 
 </script>
 
 </body>
 </html>
-<script type="module">
-
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, onAuthStateChanged } 
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyAo-EDgZOxuUY_YUKijv2mRPiyZv-ABioY",
-  authDomain: "nexora-academy-c4fd9.firebaseapp.com",
-  projectId: "nexora-academy-c4fd9",
-  storageBucket: "nexora-academy-c4fd9.firebasestorage.app",
-  messagingSenderId: "56132609079",
-  appId: "1:56132609079:web:a162000d02a9ea20a98bb2",
-  measurementId: "G-WRSWWC0070"
-};
-
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-
-// 🔐 Protect Page
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-  }
-});
-
-</script>
-
