--- a/subject.html
+++ b/subject.html
@@ -63,9 +63,9 @@ document.getElementById("subjectTitle").innerText =
 const booksContainer = document.getElementById("booksContainer");
 
 const sampleBooks = [
-  "Core Textbook",
+  "Textbook",
   "Practice Workbook",
-  "Past Questions Guide"
+  "Past Questions"
 ];
 
 sampleBooks.forEach(book => {
