--- a/subject.html
+++ b/subject.html
@@ -32,18 +32,67 @@ body { font-family: 'Poppins', sans-serif; }
 </section>
 
 <!-- Books Section -->
-<section class="mt-16 px-6 max-w-5xl mx-auto">
-  <h3 class="text-2xl font-bold mb-6 text-center">📚 Recommended Books</h3>
+<script>
 
-  <div id="booksContainer" class="grid md:grid-cols-3 gap-6">
-    <!-- Books will load here -->
-  </div>
-</section>
+// Get URL parameters
+const params = new URLSearchParams(window.location.search);
+const form = params.get("form");
+const subject = params.get("subject");
 
-<!-- Quiz Section -->
-<section class="mt-16 text-center pb-20">
-  <a id="quizBtn"
-     class="bg-indigo-500 hover:bg-indigo-600 px-8 py-3 rounded-lg text-lg font-semibold transition">
+// Display title
+document.getElementById("subjectTitle").innerText =
+  `Form ${form} – ${subject}`;
+
+const booksContainer = document.getElementById("booksContainer");
+
+// 🔥 Define book paths per subject
+const books = {
+  "1-Mathematics": [
+    {
+      title: "Core Mathematics Textbook",
+      file: "assets/books/form1/mathematics/core-textbook.pdf"
+    },
+    {
+      title: "Mathematics Workbook",
+      file: "assets/books/form1/mathematics/workbook.pdf"
+    }
+  ]
+};
+
+const key = `${form}-${subject}`;
+const subjectBooks = books[key] || [];
+
+if (subjectBooks.length === 0) {
+  booksContainer.innerHTML = `
+    <p class="text-center col-span-3 text-gray-300">
+      No books uploaded yet for this subject.
+    </p>
+  `;
+} else {
+
+  subjectBooks.forEach(book => {
+    const div = document.createElement("div");
+    div.className = "bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center";
+
+    div.innerHTML = `
+      <h4 class="font-bold mb-2">${book.title}</h4>
+      <p class="mb-4">Official Ghana syllabus material.</p>
+      <a href="${book.file}" target="_blank"
+         class="bg-indigo-600 text-white px-4 py-2 rounded-lg">
+         View Book
+      </a>
+    `;
+
+    booksContainer.appendChild(div);
+  });
+}
+
+// Quiz button
+document.getElementById("quizBtn").href =
+  `quiz.html?form=${form}&subject=${subject}`;
+
+</script>
+>
      Start Quiz
   </a>
 </section>
