--- a/subject.html
+++ b/subject.html
@@ -77,7 +77,7 @@ if (subjectBooks.length === 0) {
     div.innerHTML = `
       <h4 class="font-bold mb-2">${book.title}</h4>
       <p class="mb-4">Official Ghana syllabus material.</p>
-      <a href="${book.file}" target="_blank"
+      <a href="book-viewer.html?file=${book.file}"_blank"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg">
          View Book
       </a>
