--- a/subject.html
+++ b/subject.html
@@ -43,7 +43,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Algebraic Expression and Factorisation</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Algebraic Expression and Factorisation.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/algebraic-expression-and-factorisation.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -51,7 +51,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Angles and Pythagorean Theorem</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Angles and Pythagorean Theorem.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/angles-and-pythagorean-theorem.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -59,7 +59,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Data Organisation, Analysis and Presentation</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Data Organisation,Analysis and Presentation.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/data-organisation-analysis-and-presentation.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -67,7 +67,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Fractions and Percentages</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Fractions and Percentages.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/fractions-and-percentages.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -75,7 +75,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Linear Equations, Relations and Functions</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Linear Equations ,Relations and Functions.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/linear-equations-relations-and-functions.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -83,7 +83,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Number Set</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Number Set.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/number-set.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -91,7 +91,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Perimeter, Area and Volume</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Perimeter, Area and Volume.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/perimeter-area-and-volume.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -99,7 +99,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Probability of Independent Events</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Probability of independent events.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/probability-of-independent-events.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -107,7 +107,7 @@ body { font-family: 'Poppins', sans-serif; }
 
     <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl text-center">
       <h4 class="font-bold mb-3">Vectors and Trigonometry</h4>
-      <a href="book-viewer.html?file=assets/books/form1/mathematics/Vectors and Trigonometry.pdf"
+      <a href="book-viewer.html?file=assets/books/form1/mathematics/vectors-and-trigonometry.pdf"
          class="bg-indigo-600 text-white px-4 py-2 rounded-lg inline-block">
          View Book
       </a>
@@ -126,7 +126,6 @@ body { font-family: 'Poppins', sans-serif; }
 </section>
 
 <script>
-// Dynamic Title + Quiz Link
 const params = new URLSearchParams(window.location.search);
 const form = params.get("form");
 const subject = params.get("subject");
