--- a/index.html
+++ b/index.html
@@ -2,88 +2,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Nexora Academy | Ghana Syllabus Quiz Platform</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nexora Academy</title>
 
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
+<!-- Tailwind -->
+<script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-  </style>
+<style>
+body { font-family: 'Poppins', sans-serif; }
+</style>
 </head>
 
-<body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 text-white">
+<body class="bg-gradient-to-br from-indigo-900 via-purple-900 to-blue-900 min-h-screen text-white">
 
-  <!-- Navbar -->
-  <nav class="flex justify-between items-center p-6">
-    <h1 class="text-2xl font-bold">Nexora Academy</h1>
-    <a href="login.html"
-      class="bg-white text-indigo-900 px-4 py-2 rounded-lg font-semibold hover:bg-gray-200 transition">
-      Login
-    </a>
-  </nav>
+<!-- Navbar -->
+<nav class="flex justify-between items-center p-6">
+  <h1 class="text-2xl font-bold">Nexora Academy</h1>
+  <a href="login.html"
+     class="bg-white text-indigo-900 px-4 py-2 rounded-lg font-semibold hover:bg-gray-200 transition">
+     Login
+  </a>
+</nav>
 
-  <!-- Hero Section -->
-  <section class="flex flex-col items-center justify-center text-center px-6 mt-20">
+<!-- Hero Section -->
+<section class="flex flex-col justify-center items-center text-center mt-24 px-6">
 
-    <h2 class="text-4xl md:text-6xl font-bold mb-6">
-      Master the New Ghana Government Syllabus
-    </h2>
+  <h2 class="text-5xl font-bold mb-6">
+    Master the New Ghana Government Syllabus
+  </h2>
 
-    <p class="text-lg md:text-xl max-w-2xl mb-8 text-gray-200">
-      Interactive quizzes, structured by Form 1, Form 2, and Form 3.
-      Learn smarter. Practice better. Achieve excellence.
-    </p>
+  <p class="text-gray-200 max-w-2xl mb-8">
+    Access official textbooks, practice quizzes, and improve your academic performance with Nexora Academy.
+  </p>
 
-    <div class="flex gap-4 flex-wrap justify-center">
-      <a href="login.html"
-        class="bg-indigo-500 hover:bg-indigo-600 px-6 py-3 rounded-lg text-lg font-semibold transition">
-        Get Started
-      </a>
+  <a href="login.html"
+     class="bg-green-500 hover:bg-green-600 px-8 py-3 rounded-lg text-lg font-semibold transition">
+     Get Started
+  </a>
 
-      <a href="forms.html"
-        class="border border-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-white hover:text-indigo-900 transition">
-        Explore Forms
-      </a>
-    </div>
+</section>
 
-  </section>
-
-  <!-- Features -->
-  <section class="mt-32 px-6 pb-20">
-    <h3 class="text-3xl font-bold text-center mb-12">Why Nexora Academy?</h3>
-
-    <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-
-      <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl">
-        <h4 class="font-bold text-xl mb-3">Updated Ghana Curriculum</h4>
-        <p>All quizzes follow the latest government-approved syllabus.</p>
-      </div>
-
-      <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl">
-        <h4 class="font-bold text-xl mb-3">Form-Based Structure</h4>
-        <p>Structured into Form 1, Form 2, and Form 3 for clarity and progression.</p>
-      </div>
-
-      <div class="bg-white text-indigo-900 p-6 rounded-xl shadow-xl">
-        <h4 class="font-bold text-xl mb-3">Smart Quiz System</h4>
-        <p>Timed quizzes, instant scoring, and performance tracking.</p>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="text-center py-6 border-t border-white/20">
-    © 2026 Nexora Academy | Built for Excellence 🇬🇭
-  </footer>
+<!-- Footer -->
+<footer class="text-center mt-32 pb-6 text-gray-300">
+  © 2026 Nexora Academy | Built for Excellence
+</footer>
 
 </body>
 </html>
